# tautp

./: LICENSE  README.md  index.html  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauotp.db  tauri.conf.json
src-tauri/src/: main.rs
src/Components/: Progress.tsx  Sidebar.tsx
src/Components/Modals/: EditModal.tsx  ImportModal.tsx  MainModal.tsx  ManualEntryModal.tsx  QrModal.tsx
src/Contexts/: AppContext.tsx
src/Pages/Home/: Home.module.css  home.module.css  index.tsx
src/Pages/Home/Components/: Card.tsx  Navbar.tsx  Progress.tsx
src/Pages/New/: index.tsx
src/Utils/: db.ts  encdec.ts  logger.ts  parseOtpAuthURL.ts  randomColor.ts  randomId.ts  recordEntity.ts  useTimer.tsx
src/Utils/importers/: aegis.ts
