[package]
name = "totp"
version = "0.0.0"
description = "TAUTP - A TOTP MANAGER"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-write-text", "dialog-all", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bardecoder = "0.5.0"
image = "0.24.9"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
keyring = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
